# todo

./: .bump-to.sh  .gitignore  .init.env  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  install.sh  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  lib.rs  main.rs  paths.rs  queries.rs  run.rs  todo.rs  util.rs
src/adapters/cli/: add.rs  load.rs  mod.rs  reword.rs  whoami.rs
src/adapters/cli/config/: fs.rs  methods.rs  mod.rs
src/adapters/cli/delete/: delete_all.rs  delete_list.rs  mod.rs
src/adapters/cli/list/: base.rs  by_due_date.rs  by_tag.rs  collection.rs  mod.rs  show.rs  tags.rs
src/adapters/cli/plumbing/: init.rs
src/adapters/cli/update/: clear.rs  close_all.rs  mod.rs  update_item.rs
src/application/: app.rs  config.rs  editor.rs  mod.rs  run.rs
src/application/handlers/: add.rs  grep.rs  load.rs  mod.rs  new_list.rs  reword.rs  rng.rs  upgrade.rs
src/application/handlers/delete/: delete_all.rs  delete_item.rs  delete_list.rs
src/application/handlers/list/: base.rs  by_due_date.rs  by_tag.rs  collection.rs  show.rs  tags.rs
src/application/handlers/plumbing/: auto_completions.rs  clean_data.rs  init.rs  show_paths.rs
src/application/handlers/update/: clear.rs  close.rs  (+3 more)
src/cli/: add.rs  app.rs  clear.rs  cmd.rs  completions.rs  config.rs  grep.rs  list.rs  mod.rs  plumbing.rs  update.rs
src/commands/: add.rs  close.rs  config.rs  init.rs  load.rs  mod.rs  new_list.rs  open.rs  reword.rs  upgrade.rs  whoisthis.rs
src/commands/delete/: all_tasks.rs  list.rs  mod.rs  task.rs
src/commands/domain/: cmd.rs  mod.rs
src/commands/list/: base.rs  by_due_date.rs  by_tag.rs  collection.rs  mod.rs  show.rs  tags.rs
src/commands/maintenance/: clean_data.rs  show_paths.rs
src/commands/plumbing/: auto_completions.rs  clean_data.rs  init.rs  mod.rs  show_paths.rs
src/commands/update/: clear.rs  close.rs  mod.rs  open.rs  update_item.rs
src/domain/: datetime.rs  metadata.rs  mod.rs  prio.rs  repository.rs  status.rs  table.rs  tag.rs  todo.rs
src/domain/todo/: add_item.rs  add_list.rs  cmd.rs  create_collection.rs  create_table.rs  entities.rs  get_collection.rs  get_entries_by_due_date.rs  get_entries_by_tag.rs  get_entry.rs  get_entry_with_metadata.rs  get_list.rs  get_rnd_item.rs  get_tags.rs  grep.rs  mod.rs
src/handlers/config/: entities.rs  fs.rs  methods.rs  mod.rs
src/handlers/delete/: delete_item.rs
src/handlers/list/: base.rs  by_due_date.rs  by_tag.rs
src/handlers/plumbing/: auto_completions.rs  clean_data.rs  init.rs  mod.rs  show_paths.rs
src/handlers/update/: close.rs  open.rs
src/infrastructure/: config.rs  editor.rs  env.rs  mod.rs  paths.rs
src/persistence/: collection.rs  mod.rs  table.rs
src/persistence/sqlite/: connection.rs  mod.rs  schema.rs  todo_item_repository.rs  todo_list_repository.rs
src/queries/: mod.rs  schema.rs  table.rs
tests/: init.rs  tests.rs
tests/repository_integration/: main.rs
tests/repository_integration/mock/: mock_sqlite.rs  mod.rs
tests/repository_integration/sqlite/: mod.rs  todo_item_repository.rs  todo_list_repository.rs
todo-cli/: Cargo.toml  build.rs
todo-cli/completions/: _todo  todo.bash  todo.fish
todo-cli/src/: main.rs
todo-core/: Cargo.toml  mod.rs
todo-core/src/: config.rs  run.rs
todo-core/src/commands/: whoisthis.rs
todo-core/src/commands/delete/: list.rs
todo-core/src/commands/update/: open.rs
todo-core/src/domain/: mod.rs  todo.rs
todo-core/src/persistence/sqlite/: mod.rs  todo_list_repository.rs
(+8 files in other folders)
