[package]
name = "todo"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.28"
microxdg = "0.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.225", features = ["derive"] }
tabled = { version = "0.15", features = ["ansi"] }
thiserror = "2.0.17"
toml = "0.9.7"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
