[package]
name = "todo"
version = "0.8.0"
edition = "2021"
description = "A simple CLI-based todo list"
license = "MIT"
repository = "https://github.com/dHuberYoumans/todo"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
flate2 = "1.1.5"
glob = "0.3.3"
log = "0.4.28"
microxdg = "0.2.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.225", features = ["derive"] }
tabled = { version = "0.15", features = ["ansi"] }
tar = "0.4.44"
thiserror = "2.0.17"
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"

[package.metadata.release]
publish = false
pre-release-hook = [
  "git-cliff",
  "-o",
  "CHANGELOG.md",
]
