[package]
name = "todo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
todo-core = { path = "../todo-core" }
clap.workspace = true
env_logger.workspace = true

[build-dependencies]
todo-core = { path = "../todo-core" }
clap.workspace = true
clap_complete.workspace = true
