[package]
name = "todo-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap.workspace = true
colored = "3.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger.workspace = true
glob = "0.3.3"
log = "0.4.28"
microxdg = "0.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.225", features = ["derive"] }
tabled = { version = "0.15", features = ["ansi"] }
thiserror = "2.0.17"
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
